Revert "Fix third-party-auth dashboard layout issue."
That didn't work.

This reverts commit 6d7267132281e8a910b994eaff49f0e5f1de1520.

--- a/lms/static/sass/multicourse/_dashboard.scss
+++ b/lms/static/sass/multicourse/_dashboard.scss
@@ -137,7 +137,6 @@
 
               .control {
                 float: right;
-                white-space: initial;
               }
 
               .icon {
